--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@
   </head>
   <body>
     <main id="main">
-      <form id="recipe-form" onsubmit="createRecipe();return false;">
-        Name: <input type="text" id="name"><br>
-        Description: <input type="text" id="description"><br>
-        Ingredients: <input type="text" name="ingredients"><br>
-        <input type="text" name="ingredients"><br>
-        <input type="text" name="ingredients"><br>
-        <input type="text" name="ingredients"><br>
-        <input type="text" name="ingredients"><br>
-        <input type="submit">
-      </form>
     </main>
 
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
@@ -37,6 +27,30 @@
       ingredients: {{#each ingredients}}
         {{displayIngredient this}}
       {{/each}}
+    </script>
+
+    <script id="recipe-form-template" type="text/x-handlebars-template">
+      <form id="recipe-form" onsubmit="{{submitAction}};return false;">
+        {{> recipeFormPartial }}
+      </form>
+    </script>
+
+    <script id="recipe-form-partial" type="text/x-handlebars-template">
+      <form id="recipe-form" onsubmit="createRecipe();return false;">
+        Name: <input type="text" id="name" value="{{name}}"><br>
+        Description: <input type="text" id="description" value="{{description}}"><br>
+        Ingredients: <br>
+        {{#each ingredients}}
+          <input type="text" name="ingredients" value="{{this}}">
+        {{else}}
+          <input type="text" name="ingredients"><br>
+          <input type="text" name="ingredients"><br>
+          <input type="text" name="ingredients"><br>
+          <input type="text" name="ingredients"><br>
+          <input type="text" name="ingredients"><br>
+        {{/each}}
+        <input type="submit">
+      </form>
     </script>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
